fix: scrollbar-corner hide

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,5 +42,7 @@ body {
 
 *::-webkit-scrollbar {
   background-color: transparent;
-  border-radius: 2px;
+}
+*::-webkit-scrollbar-corner {
+  background-color: transparent;
 }
